# Amplexus

./: Amplexus.c  Amplexus.h  AmplexusTypes.h  CMakeLists.txt  ChildMoveList.c  ChildMoveList.h  DataStructures.c  DataStructures.h  DevUtilities.c  DevUtilities.h  MoveGen.c  MoveGen.h  README.md  Tests.c  Utilities.c  Utilities.h  main.c  test.c
src/: DevUtilities.c  MoveGen.c  MoveGen.h  Utilities.c  main.c
